syntax = "proto3";

package gov.cms.mpsm.rda.v1;

option java_multiple_files = true;
option java_package = "gov.cms.mpsm.rda.v1";
option java_outer_classname = "RDAProto";

// RDA API
service RDAService {

  // Gets all the fiss claims data from the database and closes the stream,
  rpc GetFissClaims(EmptyRequest) returns (stream FissClaim);
}

// Request with no fields.
message EmptyRequest {}

// FISS (Fiscal Intermediary Shared Systems) Claim
message FissClaim {
  // Document Control Number:
  //
  // Identification number for a claim. It provides a reference number for the control and monitoring of
  // specific claims, and differentiates between claims for the same beneficiary.
  string dcn = 1;

  // Health Insurance Claim Number:
  //
  // Identifies the beneficiary number associated with a claim record, as assigned by CMS.
  string hic_no = 2;

  // Current Status:
  //
  // This field identifies the current condition of the claim (paid, reject, deny, etc.) for the record.
  string curr_status = 3;

  // Current Location 1:
  //
  // This field identifies the type of processing occurring on the claim.
  string curr_loc_1 = 4;

  // Current Location 2:
  //
  // The first and second digits represent the driver name. The third and fourth digits allow for more definition with
  // the driver for the location.
  string curr_loc_2  = 5;

  // Provider State Code
  optional string prov_state_cd = 16;

  // Provider Type Facility Code
  optional string prov_typ_facil_cd = 17;

  // Provider Emergency Indicator
  optional string prov_emer_ind = 18;

  // Provider Department Identification
  optional string prov_dept_id = 19;

  // Medicare Provider ID:
  //
  // The Medicare Provider ID consists of the following:
  //   * Provider State Code
  //   * Provider Type Facility Code
  //   * Provider Emergency Indicator
  //   * Provider Department Identification
  optional string meda_prov_id = 29;

  // Total Charge Amount:
  //
  // This amount may not be equal to the sum of all the revenue lines.
  optional string total_charge_amount = 20;

  // Received Date:
  //
  // The date the claim was received by the Intermediary.
  optional string recd_dt = 21;

  // Current Transaction Date:
  //
  // The last date that the status/location changed or the claim was updated.
  optional string curr_tran_date = 22;

  // Admitting Diagnosis Code:
  //
  // Diagnosis code describing the inpatient condition at the time of the admission.
  optional string adm_diag_code = 23;

  // Principle Diagnosis Code:
  //
  // ICD-9-CM code relating to the condition established after study to be chiefly responsible for the treatment
  // identified in the claim.
  optional string principle_diag = 24;

  // National Provider Identifier (NPI) Number:
  //
  // Number as assigned by CMS to identify health plans, providers, and clearinghouses. The NPI, which contains
  // no embedded information about the health care provider it identifies, never changes. It may be deactivated
  // and then reactivated, but it does not expire. Individual providers will be assigned one NPI number and
  // organizations will be assigned one NPI number; however, organizations may define themselves as having subparts
  // and receive multiple NPIs. This field may be used to Cross walk to the Online Survey Certification and Reporting
  // System (OSCAR) number.
  optional string npi_number = 25;

  // Medicare Beneficiary Identifier:
  //
  // Medicare Beneficiary Number assigned by CMS.
  optional string mbi = 26;

  // Federal Tax Number:
  //
  // Number assigned to the provider by the Federal Government for tax reporting purposes, also known as a tax
  // identification number (TIN) or an employer identification number (EIN).
  optional string fed_tax_nb = 27;

  // FISS Procedure Codes
  repeated FissProcCodes fiss_proc_codes = 28;
}

// FISS Procedure Code
message FissProcCodes {
  // Procedure Code:
  //
  // Identifies the principal procedure (first code) and other procedures (codes two through twenty five) performed
  // during the billing period covered by the claim. This field is required for inpatient claims.
  string proc_cd = 1;

  // Procedure Flag:
  //
  // Identifies a set of flags returned from the Medicare Code Editor (MCE) module to indicate claim procedure code
  // errors.
  optional string proc_flag = 16;

  // Procedure Date:
  //
  // Date the procedure was conducted.
  optional string proc_dt = 17;
}
